# pw-monorepo

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  .gitlab-ci.yml  .lintstagedrc.js  .mcp.json.example  .prettierrc.js  AGENTS.md  CLAUDE.md  LICENSE  README.md  claude_code_zai_env.sh  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.prod.yml  ecosystem.config.js  package.json  turbo.json
apps/api/: .env.example  Dockerfile  README.md  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 09f3bb7abdfa_add_is_default_to_categories.py  1bb247752a3b_error_logs_timestamp_timezone_aware.py  2b1777f7fa6d_add_color_and_group_to_tags.py  47bc10d4eaf5_add_audit_logs_table.py  4d74c1bd279b_002_add_auth_fields_to_user.py  4f053e5a643f_add_seo_settings_to_system_settings.py  54973cba4d7d_003_add_user_oauth_links.py  58a6e8c0f6af_001_initial_models.py  69fcfe484971_add_ai_providers_table.py  80edaebaf964_add_yandex_oauth_to_system_settings.py  88869c480deb_add_bio_and_social_links_to_users.py  8cd85fdf5e06_add_parent_id_and_order_to_categories.py  91ce1fc8716f_article_categories_m2m_and_rename_.py  97adeb3d59ce_add_last_login_at_to_users.py  a1b2c3d4e5f6_004_pw038_article_seo_revisions_settings.py  b3c4d5e6f7a8_add_toc_to_articles.py  c4d5e6f7a8b9_add_type_to_articles.py  d16c5e1680ab_add_job_title_to_users.py  d5e6f7a8b9c0_add_mcp_api_keys.py  (+2 more)
apps/api/scripts/: promote_admin.py
apps/api/src/: enrich_articles.py  main.py  seed.py
apps/api/src/api/: auth.py  (+8 more)
apps/api/tests/: conftest.py  test_api.py  test_auth.py
(+1230 files in other folders)
